--- a/static/css/base/tag-form-input.css
+++ b/static/css/base/tag-form-input.css
@@ -1,13 +1,13 @@
 
 .tag-container {
     width: 70%;
-    margin-left: 30%;
+    margin-left: calc(30% - 6px);
 }
 
 .tag-container .tag {
     display: inline-block;
     width: fit-content;
-    margin: 0 5px;
+    margin: 5px 5px;
     background-color: darkgray;
 }
 
